# Multi-Agent-Path-Finding-with-Human-Presence

./: .gitignore
LNS4MAPF/: README.md
LNS4MAPF/MAPF-benchmark/mapf-map/: new_map.map  random-32-32-10.map
LNS4MAPF/experiments/: add_all_experiments.py  add_destroy_experiment.py  add_experiment_csv.py  add_overall_improvement.py  add_repair_experiment.py  destroy_experiment.py  destroy_init_sols.py  destroy_results.py  feasible_experiment.py  feasible_results.py  feasible_results_seaborn.py  influence_results.py  overall_improvement_experiment.py  overall_improvement_results.py  preprocessing_results.py  remove_experiments.py  repair_experiment.py  repair_init_sols.py  repair_results.py  reset_experiment.py  sipp_pp_original_code_test.py  sipp_pp_results.py
LNS4MAPF/my_code/my_solver/: .clang-tidy  CMakeLists.txt  Doxyfile  Readme.md
LNS4MAPF/my_code/my_solver/build_chlebajz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  destroy_experiment  feasible_experiment  feasible_restarts_experiment  influence_of_ap_experiment  influence_of_p_experiment  influence_of_w_experiment  overall_improvement_experiment  repair_experiment  simple_MAPF_solver  sipp_pp_experiment
LNS4MAPF/my_code/my_solver/build_chlebajz/tests/: CTestTestfile.cmake  Makefile  astar_bm  cmake_install.cmake  path_conv_bm  sipp_bm  unit_tests  vector_operations_bm
LNS4MAPF/my_code/my_solver/build_chlebajz/third_party_libraries/nativefiledialog-extended/: Makefile  cmake_install.cmake
LNS4MAPF/my_code/my_solver/build_chlebajz/third_party_libraries/nativefiledialog-extended/src/: Makefile  cmake_install.cmake
LNS4MAPF/my_code/my_solver/documentation/html/: Astar_8cpp.html  Astar_8cpp__incl.map  Astar_8cpp__incl.md5  Astar_8cpp_source.html  Astar_8h.html  Astar_8h__dep__incl.map  Astar_8h__dep__incl.md5  Astar_8h__incl.map  Astar_8h__incl.md5  Astar_8h_source.html  Computation_8cpp.html  Computation_8cpp__incl.map  Computation_8cpp__incl.md5  Computation_8cpp_source.html  Computation_8h.html  Computation_8h__dep__incl.map  Computation_8h__dep__incl.md5  Computation_8h__incl.map  Computation_8h__incl.md5  Computation_8h_source.html  ConstraintTable_8cpp.html  ConstraintTable_8cpp__incl.map  ConstraintTable_8cpp__incl.md5  ConstraintTable_8cpp_source.html  ConstraintTable_8h.html  ConstraintTable_8h__dep__incl.map  ConstraintTable_8h__dep__incl.md5  ConstraintTable_8h__incl.map  ConstraintTable_8h__incl.md5  ConstraintTable_8h_source.html  Experiment_8cpp.html  Experiment_8cpp__incl.map  Experiment_8cpp__incl.md5  Experiment_8cpp_source.html  Experiment_8h.html  Experiment_8h__dep__incl.map  Experiment_8h__dep__incl.md5  Experiment_8h__incl.map  Experiment_8h__incl.md5  Experiment_8h_source.html  (+866 more)
LNS4MAPF/my_code/my_solver/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+101 more)
LNS4MAPF/my_code/my_solver/inc/: Computation.h  Experiment.h  Instance.h  IterInfo.h  LNS.h  SIPP.h  SharedData.h  Solver.h  Visualizer.h  experiment_utils.h  utils.h
LNS4MAPF/my_code/my_solver/scripts/: clang_tidy.sh  compile.sh  generate_documentation.sh  profile.sh  run.sh  run_all_experiments.sh  run_benchmark.sh  run_experiment.sh  run_specific_instance.sh  run_specific_test.sh  run_tests.sh  run_valgrind.sh  show_documentation.sh
LNS4MAPF/my_code/my_solver/src/: Computation.cpp  ConstraintTable.cpp  Experiment.cpp  Instance.cpp  IterInfo.cpp  LNS.cpp  Map.cpp  SIPP.cpp  SafeIntervalTable.cpp  SharedData.cpp  Solver.cpp  Visualizer.cpp  experiment_utils.cpp  main.cpp
LNS4MAPF/my_code/my_solver/src/experiments/: destroy.cpp  feasible.cpp  feasible_restarts.cpp  influence_of_ap.cpp  influence_of_p.cpp  influence_of_w.cpp  overall_improvement.cpp  repair.cpp  sipp_pp.cpp
LNS4MAPF/my_code/my_solver/tests/: CMakeLists.txt
LNS4MAPF/my_code/my_solver/tests/inc/: test_utils.h
LNS4MAPF/my_code/my_solver/tests/src/: constraint_table_tests.cpp  instance_tests.cpp  lns_tests.cpp  safe_interval_table_tests.cpp  sipp_tests.cpp  solution_tests.cpp  test_utils.cpp  utils_tests.cpp
LNS4MAPF/my_code/my_solver/tests/src/benchmarks/: path_conv_bm.cpp  sipp_bm.cpp  vector_operations_bm.cpp
LNS4MAPF/my_code/my_solver/tests/test_maps/: biparted_5_5.map  corner_5_5.map  narrow_5_5.map  wall_5_5.map
LNS4MAPF/my_code/my_solver/tests/test_scen/: corner_5_5_scen_1.scen  den520d-random-0.scen  dummy_3_3_scen_1.scen  dummy_3_3_scen_2.scen  empty_100_100_scen_1.scen  empty_5_5_scen_1.scen  wall_5_5_scen_1.scen
LNS4MAPF/my_code/my_solver/tests/test_solutions/: den520d_scen0_500agents.sol  dummy_1.sol
LNS4MAPF/my_code/my_solver/third_party_libraries/indicators/: indicators.hpp
LNS4MAPF/my_map/: dummy.map  dummy.scen
Person_to_exit_projekt/: .gitignore  HELPER.txt  data_loader.py  grid.py  grid_remaker.py  main.py  path_finder.py
Person_to_exit_projekt/maps_exit_person/: maze-32-32-2_exit_person.map
Person_to_exit_projekt/my_solver/: CMakeLists.txt
Person_to_exit_projekt/my_solver/inc/: Computation.h  ConstraintTable.h  DataLoader.h  Grid.h  LNS.h  Map.h  MapModifier.h  PathFinder.h  Replanner.h  SIPP.h  SafeIntervalTable.h  SharedData.h  Visualizer.h  imconfig.h
Person_to_exit_projekt/my_solver/src/: Computation.cpp  DataLoader.cpp  Grid.cpp  IterInfo.cpp  LNS.cpp  Main.cpp  Map.cpp  MapModifier.cpp  PathFinder.cpp  Replanner.cpp  SIPP.cpp  SharedData.cpp  Visualizer.cpp  utils.cpp
Person_to_exit_projekt/output_paths/: test
Person_to_exit_projekt/python/: data_loader.py  grid.py  grid_remaker.py  main.py  path_finder.py
Person_to_exit_projekt/tests/: test_data_loader.py  test_grid.py  test_grid_remaker.py  test_path_finder.py
(+12 files in other folders)
